# controllers/resignation.go
@@ -2,7 +2,6 @@ package controllers
 
 import (
 	"encoding/json"
-	"fmt"
 	"oa/models"
 )
 
@@ -11,6 +10,7 @@ type ResignationController struct {
 	BaseController
 }
 
+// Reignation 添加离职请求
 type ResignationRequest struct {
 	// 申请人
 	Name string `json:"name"`
@@ -26,7 +26,7 @@ type ResignationRequest struct {
 	Reason string `json:"reason"`
 }
 
-// @Title 离职申请
+// @Title 添加离职申请
 // @Description 离职申请
 // @Param body body controllers.ResignationRequest "离职请求"
 // @Success 200
@@ -35,13 +35,7 @@ type ResignationRequest struct {
 func (r *ResignationController) AddApplication() {
 	req := &ResignationRequest{}
 	json.Unmarshal(r.Ctx.Input.RequestBody, &req)
-	fmt.Printf("%v \n", req)
-	//
-	//layout := "2006-01-02"
-	//enTime, _ := time.ParseInLocation(layout, req.EntryTime, time.Local)
-	//reTime, _ := time.ParseInLocation(layout, req.ResignationTime, time.Local)
-
-	res := models.CreateResignation(&models.Resignation{
+	err := models.CreateResignation(&models.Resignation{
 		ApplicantName:   req.Name,
 		ApplicationDate: req.Date,
 		ResignationDate: req.ResignationDate,
@@ -49,8 +43,10 @@ func (r *ResignationController) AddApplication() {
 		HandoverWork:    req.HandoverWork,
 		Reason:          req.Reason,
 	})
+	if err != nil {
+		r.ResponseError(err)
+	}
 
-	r.Response(res)
 }
 
 // @Title 通过离职申请
@@ -63,10 +59,8 @@ func (r *ResignationController) PassResignation () {
 	id := r.GetPathInt("id")
 	resign := models.FetchResignById(id)
 	resign.Status = 1
-	err := models.UpdateResignation(resign)
-	if err != nil {
-		r.ResponseError(err)
-	}
+	res := models.UpdateResignation(resign)
+	r.Response(res)
 }
 
 // @Title 拒绝离职申请
@@ -79,8 +73,18 @@ func (r *ResignationController) RejectResignation () {
 	id := r.GetPathInt("id")
 	resign := models.FetchResignById(id)
 	resign.Status = 2
-	err := models.UpdateResignation(resign)
-	if err != nil {
-		r.ResponseError(err)
-	}
+	res := models.UpdateResignation(resign)
+	r.Response(res)
+}
+
+// @Title 通过选项获取离职申请
+// @Description 通过选项获取离职申请
+// @Param option path int false "0-未审核 1-通过 2-未通过"
+// @Success 200
+// @Failure 403
+// @router /:option [get]
+func (r *ResignationController) GetResignationByOption() {
+	option := r.GetPathInt("option")
+	res := models.FetchResignationByOption(option)
+	r.Response(res)
 }
